--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,47 +1,41 @@
-name: "Build and Link Binary"
+name: Build Binary
 
 on:
   push:
-    branches: ["branchMake"]
+    branches: [branchMake, master]
   pull_request:
-    branches: ["branchMake"]
+    branches: [branchMake, master]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up build environment
-        run: |
-          sudo apt-get update && \
-          sudo apt-get install -y build-essential
-
-      - name: Lint Makefile
-        run: make lint
-
   build:
-    needs: lint
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Switch to branch with configure.ac
+      run: git checkout branchAutomake
 
-      - name: Set up build environment
-        run: |
-          sudo apt-get update && \
-          sudo apt-get install -y build-essential
+    - name: Install build tools
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y autoconf automake libtool build-essential
 
-      - name: Build the project with Makefile
-        run: |
-          make clean
-          make
+    - name: Generate configure script
+      run: autoreconf -i
 
-      - name: Verify if the binary exists
-        run: |
-          if [ ! -f ./program ]; then
-            echo "Error: Binary file was not created!" && exit 1
-          else
-            echo "Success: Binary file is created."
-          fi
+    - name: Configure the project
+      run: ./configure
+
+    - name: Compile the project
+      run: make
+
+    - name: Verify binary file
+      run: |
+        if [ -f ./my_program ]; then
+          echo "Binary file compiled successfully: ./myprogram"
+        else
+          echo "Error: Binary file was not created!" >&2
+          exit 1
+        fi
