--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,20 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        ref: branchMake 
 
     - name: Install build tools
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential
+
+    - name: Verify Makefile exists
+      run: |
+        if [ ! -f Makefile ]; then
+          echo "Makefile not found!"
+          exit 1
+        fi
 
     - name: Compile the project
       run: make
