--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
-bin_PROGRAMS = myprogram
 
-program_SOURCES = main.cpp other_source.cpp
-program_LDADD = -lstdc++
+bin_PROGRAMS = my_program
+
+my_program_SOURCES = main.cpp FuncA.cpp FuncA.h
