--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,10 @@
 AC_INIT([myprogram], [1.0], [cheryxso@gmail.com])
-AM_INIT_AUTOMAKE([-Wall -Werror foreign])
-AC_PROG_CXX
-AC_PROG_RANLIB
 
-AC_CHECK_HEADERS([stdlib.h string.h])
+AM_INIT_AUTOMAKE([foreign])
+
+AC_PROG_CXX
+
+AC_PROG_CC
 
 AC_CONFIG_FILES([Makefile])
 
