--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,9 @@
 AUTOMAKE_OPTIONS = foreign
 
-bin_PROGRAMS = my_program
+bin_PROGRAMS = myprogram
+myprogram_SOURCES = main.cpp FuncA.cpp FuncA.h
 
-my_program_SOURCES = main.cpp FuncA.cpp FuncA.h
+pkgdatadir = ${prefix}/share/myprogram
+pkgdata_DATA = README.md
+
+EXTRA_DIST = README.md debian/
