--- a/configure.ac
+++ b/configure.ac
@@ -3,9 +3,14 @@ AC_INIT([myprogram], [1.0], [cheryxso@gmail.com])
 AM_INIT_AUTOMAKE([foreign])
 
 AC_PROG_CXX
-
 AC_PROG_CC
 
-AC_CONFIG_FILES([Makefile])
+AC_CONFIG_FILES([
+    Makefile
+    debian/control
+    debian/changelog
+    debian/compat
+    debian/rules
+])
 
 AC_OUTPUT
