--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -20,22 +20,41 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian
-
+        
     - name: Generate configure script
       run: autoreconf -i
 
     - name: Configure the project
       run: ./configure
 
+    - name: Create debian files
+      run: |
+        mkdir -p debian
+        echo "Source: my_program" > debian/control
+        echo "Version: 1.0-1" >> debian/control
+        echo "Section: misc" >> debian/control
+        echo "Priority: optional" >> debian/control
+        echo "Architecture: any" >> debian/control
+        echo "Maintainer: Your Name <cheryxso@gmail.com>" >> debian/control
+        echo "Description: My program for creating Debian packages" >> debian/control
+
+        echo "my_program (1.0-1) unstable; urgency=low" > debian/changelog
+        echo "  * Initial release." >> debian/changelog
+        echo "" >> debian/changelog
+        echo " -- Your Name <cheryxso@gmail.com>  $(date -R)" >> debian/changelog
+
+        echo "9" > debian/compat
+
+        echo "#!/usr/bin/make -f" > debian/rules
+        echo "%:" >> debian/rules
+        echo "\tdh $@" >> debian/rules
+        chmod +x debian/rules
+
     - name: Build the project
       run: make
 
     - name: Create Debian package
-      run: |
-        mkdir -p debian
-        echo "9" > debian/compat
-        dch --create -v 1.0-1 --package myprogram "Initial release."
-        debuild -us -uc
+      run: debuild -us -uc
 
     - name: Upload Debian package as an artifact
       uses: actions/upload-artifact@v3
