--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -37,18 +37,20 @@ jobs:
         echo "Architecture: any" >> debian/control
         echo "Maintainer: Ksenia <cheryxso@gmail.com>" >> debian/control
         echo "Description: My program for creating Debian packages" >> debian/control
-
         echo "myprogram (1.0-1) unstable; urgency=low" > debian/changelog
         echo "  * Initial release." >> debian/changelog
         echo "" >> debian/changelog
         echo " -- Ksenia <cheryxso@gmail.com>  $(date -R)" >> debian/changelog
-
         echo "9" > debian/compat
-
         echo "#!/usr/bin/make -f" > debian/rules
         echo "%:" >> debian/rules
         echo "\tdh $@" >> debian/rules
         chmod +x debian/rules
+        
+    - name: Create original tarball
+      run: |
+        cd ..
+        tar czf myprogram_1.0.orig.tar.gz myprogram/
 
     - name: Build the project
       run: make
