--- a/Makefile.am
+++ b/Makefile.am
@@ -3,3 +3,11 @@ AUTOMAKE_OPTIONS = foreign
 bin_PROGRAMS = myprogram
 
 myprogram_SOURCES = main.cpp FuncA.cpp FuncA.h
+
+EXTRA_DIST = Makefile.am configure.ac
+
+pkgdatadir = ${prefix}/share/myprogram
+
+DIST_SOURCES = main.cpp FuncA.cpp FuncA.h
+
+DISTCLEANFILES = *.o *.lo
