--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: List uploaded artifacts
       run: |
-        ls -l /github/workspace/
+        ls -l /github/workflows/
 
     - name: Download tarball from artifacts
       uses: actions/download-artifact@v4
