--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -11,72 +11,38 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code from branchAutoPackage
+    - name: Checkout code
       uses: actions/checkout@v4
       with:
-        ref: branchAutoPackage
-        
-    - name: Set up build environment
+        fetch-depth: 0
+
+    - name: Switch to branch with configure.ac
+      run: git checkout branchAutoPackage
+
+    - name: Checkout debian directory from master
+      run: git checkout master -- debian
+
+    - name: Install build tools
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian
-        
+        sudo apt-get install -y autoconf automake libtool build-essential devscripts debhelper curl
+
+    - name: Download release tarball
+      run: |
+        curl -LJO https://github.com/holksen/L2/releases/download/v1.0/myprogram_1.0.orig.tar.gz
+
     - name: Generate configure script
       run: autoreconf -i
 
     - name: Configure the project
-      run: ./configure
+      run: ./configure --disable-dependency-tracking
 
-    - name: Checkout code from master to download artifacts
-      uses: actions/checkout@v4
-      with:
-        ref: master
-
-    - name: List uploaded artifacts
+    - name: Build Debian package
       run: |
-        ls -l /home/runner/work/_temp/
+        debuild -us -uc
 
-    - name: Download tarball from artifacts
-      uses: actions/download-artifact@v4
+    - name: Upload Debian Package
+      uses: actions/upload-artifact@v3
       with:
-        name: myprogram-tarball
-        path: ./ 
-
-    - name: Unpack tarball
-      run: |
-        tar xzf myprogram_1.0.orig.tar.gz
-
-    - name: Create debian files
-      run: |
-        mkdir -p debian
-        echo "Source: myprogram" > debian/control
-        echo "Version: 1.0-1" >> debian/control
-        echo "Section: misc" >> debian/control
-        echo "Priority: optional" >> debian/control
-        echo "Architecture: any" >> debian/control
-        echo "Maintainer: Ksenia <cheryxso@gmail.com>" >> debian/control
-        echo "Description: My program for creating Debian packages" >> debian/control
-        
-        echo "myprogram (1.0-1) unstable; urgency=low" > debian/changelog
-        echo "  * Initial release." >> debian/changelog
-        echo "" >> debian/changelog
-        echo " -- Ksenia <cheryxso@gmail.com>  $(date -R)" >> debian/changelog
-
-        echo "9" > debian/compat
-
-        echo "#!/usr/bin/make -f" > debian/rules
-        echo "%:" >> debian/rules
-        echo "\tdh $@" >> debian/rules
-        chmod +x debian/rules
-        
-    - name: Build the project
-      run: make
-
-    - name: Create Debian package
-      run: debuild -us -uc
-
-    - name: Upload Debian package as an artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: myprogram-debian-package
+        name: myprogram-deb-package
         path: ../*.deb
