--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -11,16 +11,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
+    - name: Checkout code from branchAutoPackage
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
 
     - name: Switch to branch with configure.ac
       run: git checkout branchAutoPackage
-
-    - name: Checkout debian directory from master
-      run: git checkout master -- debian
 
     - name: Install build tools
       run: |
@@ -37,12 +34,34 @@ jobs:
     - name: Configure the project
       run: ./configure --disable-dependency-tracking
 
-    - name: Build Debian package
+    - name: Create debian files
       run: |
-        debuild -us -uc
+        mkdir -p debian
+        echo "Source: myprogram" > debian/control
+        echo "Version: 1.0-1" >> debian/control
+        echo "Section: misc" >> debian/control
+        echo "Priority: optional" >> debian/control
+        echo "Architecture: any" >> debian/control
+        echo "Maintainer: Ksenia <cheryxso@gmail.com>" >> debian/control
+        echo "Description: My program for creating Debian packages" >> debian/control
+        echo "myprogram (1.0-1) unstable; urgency=low" > debian/changelog
+        echo "  * Initial release." >> debian/changelog
+        echo "" >> debian/changelog
+        echo " -- Ksenia <cheryxso@gmail.com>  $(date -R)" >> debian/changelog
+        echo "9" > debian/compat
+        echo "#!/usr/bin/make -f" > debian/rules
+        echo "%:" >> debian/rules
+        echo "\tdh $@" >> debian/rules
+        chmod +x debian/rules
+
+    - name: Build the project
+      run: make
+
+    - name: Create Debian package
+      run: debuild -us -uc
 
     - name: Upload Debian Package
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: myprogram-deb-package
         path: ../*.deb
