--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -24,15 +24,19 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y autoconf automake libtool build-essential devscripts debhelper curl
 
-    - name: Download release tarball
+    - name: Download tarball from artifacts
+      uses: actions/download-artifact@v4
+      with:
+        name: myprogram-tarball
+        path: ./
+
+    - name: List files in the current directory (for debugging)
       run: |
-        curl -LJO https://github.com/holksen/L2/releases/download/v1.0/myprogram_1.0.orig.tar.gz
+        ls -l
 
-    - name: Generate configure script
-      run: autoreconf -i
-
-    - name: Configure the project
-      run: ./configure --disable-dependency-tracking
+    - name: Unpack tarball
+      run: |
+        tar xzf myprogram_1.0.orig.tar.gz
 
     - name: Create debian files
       run: |
@@ -53,10 +57,6 @@ jobs:
         echo "%:" >> debian/rules
         echo "\tdh $@" >> debian/rules
         chmod +x debian/rules
-
-    - name: Create original tarball
-      run: |
-        tar czf myprogram_1.0.orig.tar.gz --exclude .git --exclude debian .
 
     - name: Build the project
       run: make
