--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Download release tarball
       run: |
-        curl -LJO https://github.com/cheryxso/DevOps/releases/download/v1.0/myprogram_1.0.orig.tar.gz
+        curl -LJO https://github.com/cheryxso/DevOps/releases/download/v.1/myprogram-1.0.tar.gz
 
     - name: Check if tarball is valid gzip
       run: |
