--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install build tools
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian
+        sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian autoconf automake
 
     - name: Generate configure script
       run: autoreconf -i
