--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -14,18 +14,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0 
+        fetch-depth: 0  
 
     - name: Install build tools
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian autoconf automake
+        sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian
 
-    - name: Generate configure script
-      run: autoreconf -i
-
-    - name: Configure the project
-      run: ./configure --disable-dependency-tracking
+    - name: Check if configure script exists
+      run: |
+        if [ ! -f ./configure ]; then
+          echo "configure script not found, skipping autoreconf";
+        else
+          ./configure --disable-dependency-tracking
+        fi
 
     - name: Create tarball of the project
       run: |
