--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -21,6 +21,17 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian autoconf automake
 
+    - name: Create configure.ac if not exists
+      run: |
+        if [ ! -f ./configure.ac ]; then
+          echo "AC_INIT([myprogram], [1.0], [cheryxso@gmail.com])" > configure.ac
+          echo "AM_INIT_AUTOMAKE([foreign])" >> configure.ac
+          echo "AC_PROG_CXX" >> configure.ac
+          echo "AC_PROG_CC" >> configure.ac
+          echo "AC_CONFIG_FILES([Makefile])" >> configure.ac
+          echo "AC_OUTPUT" >> configure.ac
+        fi
+
     - name: Generate configure script
       run: autoreconf -i
 
