--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Create tarball of the project
       run: |
         mkdir -p myprogram_1.0
-        cp -r * myprogram_1.0/
+        cp -r !(myprogram_1.0) myprogram_1.0/
         tar czf myprogram_1.0.orig.tar.gz myprogram_1.0/
 
     - name: Create debian files
