--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install build tools
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian autoconf automake
+        sudo apt-get install -y build-essential devscripts debhelper fakeroot lintian autoconf automake rsync
 
     - name: Create configure.ac if not exists
       run: |
@@ -52,7 +52,7 @@ jobs:
     - name: Create tarball of the project
       run: |
         mkdir -p myprogram_1.0
-        cp -r !(myprogram_1.0) myprogram_1.0/
+        rsync -av --exclude=myprogram_1.0 ./ myprogram_1.0/
         tar czf myprogram_1.0.orig.tar.gz myprogram_1.0/
 
     - name: Create debian files
