--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -51,9 +51,9 @@ jobs:
 
     - name: Create tarball of the project
       run: |
-        mkdir -p myprogram_1.0
-        rsync -av --exclude=myprogram_1.0 ./ myprogram_1.0/
-        tar czf myprogram_1.0.orig.tar.gz myprogram_1.0/
+        mkdir -p myprogram-1.0
+        rsync -av --exclude=myprogram-1.0 ./ myprogram-1.0/
+        tar czf ../myprogram_1.0.orig.tar.gz myprogram-1.0/
 
     - name: Create debian files
       run: |
@@ -79,7 +79,9 @@ jobs:
         chmod +x debian/rules
 
     - name: Build the Debian package
-      run: debuild -us -uc
+      run: |
+        cd ..
+        debuild -us -uc
 
     - name: Upload Debian package as an artifact
       uses: actions/upload-artifact@v4
