--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -53,7 +53,7 @@ jobs:
       run: |
         mkdir -p myprogram-1.0
         rsync -av --exclude=myprogram-1.0 ./ myprogram-1.0/
-        tar czf ../myprogram_1.0.orig.tar.gz myprogram-1.0/
+        tar czf myprogram_1.0.orig.tar.gz myprogram-1.0/
 
     - name: Create debian files
       run: |
@@ -79,9 +79,7 @@ jobs:
         chmod +x debian/rules
 
     - name: Build the Debian package
-      run: |
-        cd ..
-        debuild -us -uc
+      run: debuild -us -uc
 
     - name: Upload Debian package as an artifact
       uses: actions/upload-artifact@v4
