build-debian-package.yml

--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -81,7 +81,7 @@ jobs:
 
         echo "#!/usr/bin/make -f" > debian/rules
         echo "%:" >> debian/rules
-        echo "\tdh $@" >> debian/rules
+        echo -e "\tdh \$@" >> debian/rules
         chmod +x debian/rules
 
     - name: Build the Debian package
