--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,9 @@
 AC_INIT([myprogram], [1.0], [cheryxso@gmail.com])
 AM_INIT_AUTOMAKE([foreign])
-
 AC_PROG_CXX
 AC_PROG_CC
+
+AC_CHECK_LIB([gtest], [main])
 
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
