--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: CI for Unit Tests
 
 on:
   push:
@@ -19,11 +19,11 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential autoconf automake libtool pkg-config libgtest-dev
+        sudo apt-get install -y build-essential autoconf automake libtool pkg-config cmake libgtest-dev
         cd /usr/src/gtest
         sudo cmake CMakeLists.txt
         sudo make
-        sudo cp *.a /usr/lib
+        sudo find . -name '*.a' -exec cp {} /usr/lib \;
 
     - name: Generate configure script
       run: autoreconf -i
