--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,5 @@ myprogram_SOURCES = main.cpp FuncA.cpp FuncA.h
 check_PROGRAMS = test_program
 test_program_SOURCES = test_func_a.cpp FuncA.cpp FuncA.h
 
-test_program_LDADD = -lgtest -lgtest_main -pthread
-
-dist_doc_DATA = README.md
+test_program_LDFLAGS = -pthread
+test_program_LDADD = -lgtest -lgtest_main
