--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,37 +2,41 @@ name: CI for Unit Tests
 
 on:
   push:
-    branches: [branchAutoTest, master]
+    branches:
+      - branchAutoTest
+      - master
   pull_request:
-    branches: [branchAutoTest, master]
+    branches:
+      - branchAutoTest
+      - master
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential autoconf automake libtool pkg-config cmake libgtest-dev
-        cd /usr/src/gtest
-        sudo cmake CMakeLists.txt
-        sudo make
-        sudo cp *.a /usr/lib
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential autoconf automake libtool pkg-config cmake libgtest-dev
+          cd /usr/src/gtest
+          sudo cmake CMakeLists.txt
+          sudo make
+          sudo cp /usr/src/gtest/build/lib/*.a /usr/lib
 
-    - name: Generate configure script
-      run: autoreconf -i
+      - name: Generate configure script
+        run: autoreconf -i
 
-    - name: Configure the project
-      run: ./configure
+      - name: Configure the project
+        run: ./configure
 
-    - name: Build the project
-      run: make
+      - name: Build the project
+        run: make
 
-    - name: Run unit tests
-      run: make check
+      - name: Run unit tests
+        run: make check
