--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,10 +24,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential autoconf automake libtool pkg-config cmake libgtest-dev
+          
+      - name: Install Google Test libraries
+        run: |
           cd /usr/src/gtest
-          sudo cmake CMakeLists.txt
+          sudo cmake .
           sudo make
-          sudo cp /usr/src/gtest/build/lib/*.a /usr/lib
+          sudo cp *.a /usr/lib
 
       - name: Generate configure script
         run: autoreconf -i
