--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,14 +23,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential autoconf automake libtool pkg-config cmake libgtest-dev
-          
-      - name: Install Google Test libraries
-        run: |
-          cd /usr/src/gtest
-          sudo cmake .
-          sudo make
-          sudo cp *.a /usr/lib
+          sudo apt-get install -y build-essential autoconf automake libtool pkg-config cmake
 
       - name: Generate configure script
         run: autoreconf -i
