--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,21 +4,26 @@ on:
   push:
     branches:
       - branchAutoTest
-      - master
   pull_request:
     branches:
       - branchAutoTest
-      - master
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          ref: branchAutoTest
+
+      - name: Verify configure.ac exists
+        run: |
+          if [ ! -f configure.ac ]; then
+            echo "Error: configure.ac is missing."
+            exit 1
+          fi
 
       - name: Install dependencies
         run: |
