--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: branchAutoTest
+
+      - name: List project files
+        run: ls -la
 
       - name: Verify configure.ac exists
         run: |
