--- a/Makefile.am
+++ b/Makefile.am
@@ -9,5 +9,5 @@ testprogram_SOURCES = test_FuncA.cpp FuncA.cpp FuncA.h
 testprogram_LDFLAGS = -pthread
 testprogram_LDADD = -lgtest -lgtest_main
 
-tests/test_FuncA.o: tests/test_FuncA.cpp FuncA.h
+test_FuncA.o: test_FuncA.cpp FuncA.h
     $(CXX) $(CXXFLAGS) -c $< -o $@
