--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -51,8 +51,8 @@ jobs:
 
     - name: List files after build
       run: |
-        echo "Listing files in the current directory"
-        ls -la  # Check if .deb file exists
+        echo "Listing files in the current directory to ensure .deb file is created"
+        ls -la  # Checking if .deb file exists after the build
 
     - name: Create tarball of the project
       run: |
@@ -71,7 +71,7 @@ jobs:
         echo "Priority: optional" >> debian/control
         echo "Standards-Version: 3.9.6" >> debian/control
         echo "Build-Depends: debhelper (>= 9), g++" >> debian/control
-        
+        echo "" >> debian/control
         echo "Package: myprogram" >> debian/control
         echo "Architecture: any" >> debian/control
         echo "Depends: \${shlibs:Depends}, \${misc:Depends}" >> debian/control
@@ -81,38 +81,22 @@ jobs:
         echo "  * Initial release." >> debian/changelog
         echo "" >> debian/changelog
         echo " -- Ksenia <cheryxso@gmail.com>  $(date -R)" >> debian/changelog
-        
         echo "9" > debian/compat
         echo "#!/usr/bin/make -f" > debian/rules
         echo "%:" >> debian/rules
         echo -e "\tdh \$@" >> debian/rules
-        
         chmod +x debian/rules
 
     - name: Build the Debian package
       run: |
         cd ../myprogram-1.0
         debuild -us -uc --no-sign
-        
-    - name: List files after Debian build 
-      run: |
-        cd ../myprogram-1.0 
-        ls -la  # Check if .deb file was created
+        echo "Listing files after debuild"
+        ls -la  # Make sure the .deb file is created
+        echo "Debian package build completed."
 
-    - name: Move .deb file to artifact folder
-      run: |
-        mkdir -p ./path/to/artifact/
-        
-        if ls ../myprogram-1.0/*.deb 1> /dev/null 2>&1; then 
-          mv ../myprogram-1.0/*.deb ./path/to/artifact/
-          echo ".deb file moved successfully."
-        else 
-          echo "No .deb file found."
-          exit 1 
-        fi 
-
-    - name: Upload Debian package as an artifact 
-      uses: actions/upload-artifact@v4 
+    - name: Upload Debian package as an artifact
+      uses: actions/upload-artifact@v4
       with:
-        name: myprogram-debian-package 
-        path: ./path/to/artifact/*.deb
+        name: myprogram-debian-package
+        path: ./myprogram-1.0/*.deb
