--- a/.github/workflows/build-debian-package.yml
+++ b/.github/workflows/build-debian-package.yml
@@ -51,14 +51,14 @@ jobs:
 
     - name: Create tarball of the project
       run: |
-        mkdir -p ../myprogram-1.0
-        rsync -av --exclude=myprogram-1.0 ./ ../myprogram-1.0/
+        mkdir -p myprogram-1.0
+        rsync -av --exclude=myprogram-1.0 ./ myprogram-1.0/
         cd ../
         tar czf myprogram_1.0.orig.tar.gz myprogram-1.0/
 
     - name: Create debian files
       run: |
-        cd ../myprogram-1.0
+        cd myprogram-1.0
         mkdir -p debian
         echo "Source: myprogram" > debian/control
         echo "Maintainer: Ksenia <cheryxso@gmail.com>" >> debian/control
@@ -84,13 +84,18 @@ jobs:
 
     - name: Build the Debian package
       run: |
-        cd ../myprogram-1.0
+        cd myprogram-1.0
         debuild -us -uc --no-sign
         echo "Listing files after debuild"
         ls -la  # Make sure the .deb file is created
 
-    - name: Upload Debian package as an artifact
-      uses: actions/upload-artifact@v3
+    - name: Change directory to myprogram-1.0 and upload the Debian package as an artifact
+      run: |
+        cd myprogram-1.0
+        echo "Listing files in myprogram-1.0"
+        ls -la  # Ensure .deb file exists in the directory
+        # Upload the .deb file
+      uses: actions/upload-artifact@v4
       with:
         name: my_program-deb-package
-        path: "../myprogram-1.0/*.deb"
+        path: "*.deb"
